<resources>
    <string name="app_name">HealthC</string>
    <string name="sign_up_title">회원가입</string>
    <string name="sign_up_content">회원등록을 위해 정보를 입력해주세요.</string>
    <string name="sign_up_email">사용할 이메일을\n입력해주세요.</string>
    <string name="sign_up_password">사용할 비밀번호를\n입력해주세요.</string>
    <string name="sign_up_info">갖고있는 알레르기가 있다면\n선택해주세요.</string>
    <string name="splash_string">영양성분을 분석하는 스마트 돋보기 헬씨</string>
    <string name="sign_up">회원가입</string>
    <string name="sign_in">로그인</string>
    <string name="sign_out">로그아웃</string>
    <string name="next">다음</string>
    <string name="done">완료</string>
    <string name="hint_email">이메일 입력</string>
    <string name="hint_password">비밀번호 입력</string>
    <string name="hint_name">이름 입력</string>
    <string name="hint_info">알레르기를 유발할 수 있는 성분을 가진 음식을 알려드릴게요!</string>
    <string name="sign_in_healthc">스마트 돋보기 헬씨에\n오신걸 환영해요!</string>
    <string name="sign_in_email">이메일을 입력하세요.</string>
    <string name="sign_in_password">비밀번호를 입력하세요.</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="soyBean">대두</string>
    <string name="peanuts">땅콩</string>
    <string name="egg">계란</string>
    <string name="milk">우유</string>
    <string name="wheat">밀</string>
    <string name="peach">복숭아</string>
    <string name="crustacean">갑각류</string>
    <string name="shellfish">조개류</string>
    <string name="fish">생선</string>
    <string name="pork">돼지고기</string>
    <string name="nuts">견과류</string>
    <string name="allergy">알레르기</string>
    <string name="my_allergy">내 알레르기</string>
    <string name="positive_dialog_title">먹을 수 있는 음식</string>
    <string name="positive_dialog_content">알레르기를 유발하는 성분이 포함되어 있지 않습니다.</string>
    <string name="negative_dialog_title">먹을 수 없는 음식</string>
    <string name="profile_title">%1$s 님\n오늘도 건강한 하루 보내세요!</string>
    <string name="profile_username_edit">이름 수정</string>
    <string name="profile_allergy_title">%1$s 님의 알레르기 정보입니다.</string>
    <string name="food_search">식품 알레르기를 입력하세요.</string>
    <string name="food_title">알레르기 카테고리</string>
    <string name="search_ingredient_title">%1$s 알레르기가 있으면,\n아래의 음식을 주의하세요.</string>
    <string name="search_product">가공식품을 검색하세요.</string>
    <string name="product_name_capacity">%1$s(%2$s)</string>
    <string name="product_kind">제품 카테고리: %1$s</string>
    <string name="product_allergy">알레르기 발생 성분: %1$s</string>
    <string name="product_raw">원재료 구성: %1$s</string>
    <string name="product_nutrient">영양 성분: %1$s</string>
    <string name="product_manufacture">제조사: %1$s</string>
    <string name="search_product_title">%1$s에 대한 가공식품 검색 결과입니다.</string>
    <string name="dialog_search_product">가공식품 영양 성분 검색</string>
    <string name="dialog_search_ingredient">알레르기 성분이 포함된 음식 검색</string>
    <string name="dialog_edit_name">변경하실 이름을 입력하세요.</string>
    <string name="toggle_lang_kor">한국어</string>
    <string name="toggle_lang_eng">English</string>
    <string name="toggle_camera_ocr">성분 인식</string>
    <string name="toggle_camera_obj_detect">음식 인식</string>
    <string name="eng_search_product">가공식품을 입력하세요.</string>
    <string name="dialog_object_detect">음식 인식 카메라</string>
    <string name="dialog_image_process_kor">한국어 성분표 인식 카메라</string>
    <string name="dialog_image_process_eng">영어 성분표 인식 카메라</string>
    <string name="dialog_object_detect_title">판별된 음식 : %1$s </string>
    <string name="dialog_object_detect_pos_button">알레르기 요소 확인</string>
    <string name="dialog_object_detect_neg_button">한번 더 촬영하기</string>
    <string name="not_founded">%1$s에 대한 검색 결과를 찾을 수 없습니다.</string>
    <string name="object_detection_camera">음식 인식</string>
    <string name="english_ocr_camera">영어 성분표 인식</string>
    <string name="korea_ocr_camera">한국어 성분표 인식</string>
    <string name="profile_allergy_edit">알레르기 정보 수정</string>
    <string name="dialog_search_choice_title">헬씨 사전 검색</string>
    <string name="recent_search">최근 검색</string>
    <string name="recipe_search_title">알레르기를 입력해보세요</string>
    <string name="recipe_search_content">알레르기 요소가 포함된 음식을\n확인할 수 있어요</string>
    <string name="product_search_title">가공식품을 입력해보세요</string>
    <string name="product_search_content">알레르기 성분와 영양성분표를\n확인할 수 있어요</string>
    <string name="product_type_title">검색 설정</string>
    <string name="product_kor">국내 상품 검색</string>
    <string name="product_eng">해외 상품 검색</string>
    <string name="product_detail_nutrients_title">영양성분</string>
    <string name="product_detail_allergies_title">포함된 원재료</string>
    <string name="food_fact_title">영양 성분표</string>
    <string name="allergies_free">포함되지 않은 알러지 성분</string>
    <string name="include_allergies_title">포함된 알러지 성분</string>
    <string name="deregister">계정 탈퇴</string>
    <string name="account">계정 관리</string>
    <string name="terms">이용 약관</string>
    <string name="failed_object_detection_title">음식을 인식할 수 없습니다.\n더 멀리서 찍거나, 다른 사진을 사용해주세요 !</string>
    <string name="object_detection_result">인식된 음식</string>
    <string name="food_detection">음식 인식</string>
    <string name="recongnized_text">인식된 텍스트</string>
    <string name="profile">프로필</string>
    <string name="cancel">취소</string>
    <string name="home_top_app_name">HealthC |</string>
    <string name="home_camera_content">사진에 알러지 요소가 포함되어 있는지 확인해드릴게요!</string>
    <string name="home_camera_title">알러지 예방 푸드 카메라</string>
    <string name="home_camera_ocr_content">광학문자인식을 활용한</string>
    <string name="home_camera_ocr_title">영양성분표 사진 인식하기</string>
    <string name="home_camera_o_d_content">객체인식을 활용한</string>
    <string name="home_camera_o_d_title">음식 사진 인식하기</string>
    <string name="home_product_title">가공식품 영양성분 검색</string>
    <string name="home_product_content">가공식품에 포함된 알러지 요소를 확인하세요!</string>
    <string name="home_product_edittext_hint">가공식품 검색 (국내/해외)</string>
    <string name="home_recipe_title">알러지 요소가 포함된 음식 검색</string>
    <string name="home_recipe_content">주의해서 먹어야 하는 음식을 확인하세요!</string>
    <string name="home_recipe_button_text">내 알러지 요소가 들어간 음식 보러가기</string>
</resources>