<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.healthc.presentation.auth.AuthViewModel"
            />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_arrow_back_ios_new_24" />

        <TextView
            android:id="@+id/signUpInfoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_info"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/sc_dream_nor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_button" />

        <TextView
            android:id="@+id/signUpInfoHintTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_info"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpInfoTextView" />

        <TextView
            android:id="@+id/signInFoAllergyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/allergy"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpInfoHintTextView" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/allergy_chip_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:chipSpacingHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signInFoAllergyText">

            <com.google.android.material.chip.Chip
                android:id="@+id/peach_chip"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peach"
                android:textColor="@color/chip_text_color"
                app:chipBackgroundColor="@color/chip_background"
                app:checkedIconEnabled="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/fork_chip"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pork"
                android:textColor="@color/chip_text_color"
                app:chipBackgroundColor="@color/chip_background"
                app:checkedIconEnabled="false"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/egg_chip"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/egg"
                android:textColor="@color/chip_text_color"
                app:chipBackgroundColor="@color/chip_background"
                app:checkedIconEnabled="false"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/milk_chip"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/milk"
                android:textColor="@color/chip_text_color"
                app:chipBackgroundColor="@color/chip_background"
                app:checkedIconEnabled="false"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/crustacean_chip"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crustacean"
                android:textColor="@color/chip_text_color"
                app:chipBackgroundColor="@color/chip_background"
                app:checkedIconEnabled="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/bean_chip"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:text="@string/soyBean"
                android:textColor="@color/chip_text_color"
                app:chipBackgroundColor="@color/chip_background"
                app:checkedIconEnabled="false"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/peanut_chip"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peanuts"
                android:textColor="@color/chip_text_color"
                app:chipBackgroundColor="@color/chip_background"
                app:checkedIconEnabled="false"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/wheat_chip"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wheat"
                android:textColor="@color/chip_text_color"
                app:chipBackgroundColor="@color/chip_background"
                app:checkedIconEnabled="false"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/shellfish_chip"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shellfish"
                android:textColor="@color/chip_text_color"
                app:chipBackgroundColor="@color/chip_background"
                app:checkedIconEnabled="false"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/fish_chip"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:text="@string/fish"
                android:textColor="@color/chip_text_color"
                app:chipBackgroundColor="@color/chip_background"
                app:checkedIconEnabled="false"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/nuts_chip"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nuts"
                android:textColor="@color/chip_text_color"
                app:chipBackgroundColor="@color/chip_background"
                app:checkedIconEnabled="false"
                />

        </com.google.android.material.chip.ChipGroup>

        <Button
            android:id="@+id/signUpInfoDoneButton"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/green"
            android:text="@string/done"
            android:onClick="@{() -> viewModel.signUpUser()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>